--- a/src/imaster-client/src/index.html
+++ b/src/imaster-client/src/index.html
@@ -3,8 +3,8 @@
 <head>
     <title></title>
     <meta charset="utf-8"/>
-    <link href="index.css" rel="stylesheet" type="text/css"/>
-    <script src="index.js" type="text/javascript"></script>
+    <link href="main.css" rel="stylesheet" type="text/css"/>
+    <script src="main.js" type="text/javascript"></script>
 </head>
 <body>
 <data-nav></data-nav>
