--- a/src/imaster-client/src/index.html
+++ b/src/imaster-client/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en" ng-app="imaster">
 <head>
-    <title></title>
     <meta charset="utf-8"/>
+    <title>ЯМагистран!</title>
+    <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="main.css" rel="stylesheet" type="text/css"/>
     <script src="main.js" type="text/javascript"></script>
 </head>
