--- a/src/imaster-client/src/index.html
+++ b/src/imaster-client/src/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="utf-8"/>
     <title>ЯМагистран!</title>
-    <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-    <link href="main.css" rel="stylesheet" type="text/css"/>
-    <script src="main.js" type="text/javascript"></script>
+    <link href="favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <!-- styles:css -->
+    <!-- endinject -->
 </head>
 <body>
 <data-nav></data-nav>
 <div class="content" ui-view></div>
+<!-- vendor:js -->
+<!-- endinject -->
+
+<!-- scripts:js -->
+<!-- endinject -->
+
+<!-- templates:js -->
+<!-- endinject -->
 </body>
 </html>
